# dsquared-pbi-ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: sample_queries.txt
pbi_ai/: __init__.py  dashboard_generator.py  dax_generator.py  main.py  report_updater.py  visual_generator.py
